- Shortcuts for menu added
- HTML export now uses "<img..." instead of ugly "<svg..."
- HTML export now used "<div..." instead of "<svg><rect..."
- HTML export now also supports 3d transformations using layered div's
- The PIE-plugin, which in fact is just a sample how to create an item plugin, now also supports HTML export.
- Bugfix: using SVG with <![CDATA[...]]> will now be escaped correctly when writing amx files
- Bugfix: HTML export handles keyframes now correctly

1.8.1
---
- To have a better contact to our users we have created a newsletter. You can opt-in on our website or automatically while downloading a license key. Therefore we have also removed the news-panel in app.
- Added links to buy or to get a free license key.
- Move object using cursor keys
- Keyframes and transitions are now selectable and can be moved using cursor keys and by dragging with the mouse
- Moving keyframes and transitions is now undoable
- Rulers have been added
- Zoom has been added
- Bugfix: Movies can now be created in paths with blank spaces.

1.8
---
- Loading of binary files has been removed

1.7.1
---
- Added the ability to exchange the content of a bitmap
- Bugfix: SVG and Text items now react on width and height keyframes
- Bugfix: Resizing an item has also drawed the seletion rect

1.7
---
- New plugin technology for export added
- New Plugin -> Export HTML
- Rendering text as SVG now for compability to HTML export
- Selection rectangle added

1.6
---
- Saving files is done in XML now only. Binary files can still be readed.
- New plugin technology for items added.
- Animation of scene.brushColor, brushColor, penColor and textColor is now possible

1.5
---
- App icon added
- Cursors for adding items added
- Added a texteditor for SVG
- Added the ability to add svg attributes that can be animated

1.4
---
News-Panel is now able to display html.

Bugfix: Fixed a problem with RPATH in AppImage

1.3
---
Plugins are not supported anymore. 